[gd_scene load_steps=6 format=3 uid="uid://b7naq2v34c6c3"]

[ext_resource type="Script" uid="uid://dn6f4mhg412fu" path="res://scripts/ui/ShopUI.gd" id="1_gx0hi"]
[ext_resource type="PackedScene" uid="uid://c6w8fa71e3j2a" path="res://scenes/ui/Tienda/ShopOfferCard.tscn" id="2_d2b5w"]
[ext_resource type="Script" uid="uid://cqm8p5ingiqnx" path="res://scripts/shop/Shop.gd" id="3_v6fsn"]
[ext_resource type="Script" uid="uid://clcavvlgh41d6" path="res://scripts/entities/PieceBlueprint.gd" id="4_ho8c7"]
[ext_resource type="Resource" uid="uid://c3hmbqitoyus6" path="res://assets/blueprints/pawn_blueprint.tres" id="5_xkwph"]

[node name="ShopUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 910.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gx0hi")
offer_card_scene = ExtResource("2_d2b5w")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 0.8)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TopBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="GoldLabel" type="Label" parent="MarginContainer/VBoxContainer/TopBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Oro: 10"

[node name="RerollButton" type="Button" parent="MarginContainer/VBoxContainer/TopBar"]
unique_name_in_owner = true
layout_mode = 2
text = "Reroll (1 Oro)"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="OffersContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Shop" type="Node" parent="."]
script = ExtResource("3_v6fsn")
all_blueprints = Array[ExtResource("4_ho8c7")]([ExtResource("5_xkwph")])
